<resources>
    <string name="app_name">Bookstore</string>
    <!-- Title for the activity to add a new book [CHAR LIMIT=20] -->
    <string name="editor_activity_title_new_book">Add a Book</string>

    <!-- Title for the activity to edit a book [CHAR LIMIT=20] -->
    <string name="editor_activity_title_edit_book">Edit Book</string>

    <!-- Label for overflow menu option that inserts fake book data into the app [CHAR LIMIT=20] -->
    <string name="action_insert_dummy_data">Insert Dummy Data</string>

    <!-- Label for overflow menu option that deletes all book data in the app [CHAR LIMIT=20] -->
    <string name="action_delete_all_entries">Delete All Books</string>

    <!-- Label for product overview category of attributes in the editor [CHAR LIMIT=30] -->
    <string name="category_product">Book Overview</string>

    <!-- Text hint for name field in the editor [CHAR LIMIT=30] -->
    <string name="hint_book_name">Title</string>

    <!-- Text hint for price field in the editor [CHAR LIMIT=5] -->
    <string name="hint_book_price">Price</string>

    <!-- Text hint for quantity field in the editor [CHAR LIMIT=5] -->
    <string name="hint_book_quantity">Quantity</string>

    <!-- zero text for quantity picker -->
    <string name="quantity_zero">0</string>

    <!-- Label for supplier overview category of attributes in the editor [CHAR LIMIT=30] -->
    <string name="category_supplier">Supplier</string>

    <!-- Text hint for name field in the editor [CHAR LIMIT=30] -->
    <string name="hint_supplier_name">Supplier Name</string>

    <!-- Text hint for phone field in the editor [CHAR LIMIT=30] -->
    <string name="hint_supplier_phone">Supplier Phone</string>

    <!-- Label for editor menu option to save book and leave editor [CHAR LIMIT=20] -->
    <string name="action_save">Save</string>

    <!-- Label for editor overflow menu option that deletes the current book [CHAR LIMIT=20] -->
    <string name="action_delete">Delete Book</string>

    <!-- Successful book save -->
    <string name="editor_update_book_success">Book updated</string>

    <!-- Failed book save -->
    <string name="editor_update_book_failed">Book failed to update</string>

    <!-- Invalid -->
    <string name="editor_null_phone">Invalid or empty phone number saved as
        null</string>

    <!-- Not all fields filled out -->
    <string name="editor_fill_all_fields">Please fill out all fields</string>

    <!-- valid phone warning text -->
    <string name="editor_valid_phone">Please supply a valid supplier phone number.</string>

    <!-- Title text for the empty view, which describes the empty shelf image
    [CHAR LIMIT=50] -->
    <string name="empty_view_title_text">Looks like you have no books...</string>

    <!-- Subtitle text for the empty view that prompts the user to add a book
    [CHAR LIMIT=50] -->
    <string name="empty_view_subtitle_text">Get started by adding a book</string>

    <!-- User is leaving the editor with unsaved changes -->
    <string name="unsaved_changes_dialog_msg">Discard your changes and quit
        editing?</string>

    <!-- discard unsaved changes -->
    <string name="discard">Discard</string>

    <!-- keep editing unsaved changes -->
    <string name="keep_editing">Keep Editing</string>

    <!-- Toast message in editor when current book was successfully deleted
    [CHAR LIMIT=NONE] -->
    <string name="editor_delete_success">Book deleted</string>

    <!-- Toast message in editor when current book has failed to be deleted
    [CHAR LIMIT=NONE] -->
    <string name="editor_delete_failed">Error with deleting book</string>

    <!-- Dialog message to ask the user to confirm deleting the current book
    [CHAR LIMIT=NONE] -->
    <string name="delete_dialog_msg">Delete this book?</string>

    <!-- Dialog button text for the option to confirm deleting the current book
    [CHAR LIMIT=20] -->
    <string name="delete">Delete</string>

    <!-- Dialog button text for the option to cancel deletion of the current
    book [CHAR LIMIT=20] -->
    <string name="cancel">Cancel</string>

    <!-- Text for sale button -->
    <string name="sale">Sale</string>

    <!-- Text for order button -->
    <string name="order">Contact Supplier</string>

    <!-- Text for minus button -->
    <string name="minus">-</string>

    <!-- Text for plus button -->
    <string name="plus">+</string>
</resources>
